kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: etrm
  labels:
    environment: dev
    project: etrm
