kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trade-service
  namespace: etrm
  labels:
    app: trade-service
    project: etrm
    environment: dev

spec:
  type: ClusterIP

  selector:
    app: trade-service

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
